--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -54,35 +54,17 @@
                                 <span th:text="${comment.user.name}"></span>
                             </h5>
                             <div th:text="${comment.content}"></div>
-                            <div class="menu">
+                            <div class="menu" style="margin-top: 10px">
                                 <span class="glyphicon glyphicon-thumbs-up icon"></span>
-                                <span class="glyphicon glyphicon-comment icon" th:data-id="${comment.id}" onclick="collapseComments(this)"></span>
-                                <span th:text="${#dates.format(comment.gmtCreate,'YYYY-MM-DD HH:MM:SS')}"></span>
+                                <span th:data-id="${comment.id}" onclick="collapseComments(this)">
+                                    <span class="glyphicon glyphicon-comment icon"></span>
+                                    <span th:text="${comment.commentCount}"></span>
+                                </span>
+                                <span style="float: right" th:text="${#dates.format(comment.gmtCreate,'YYYY-MM-dd HH:MM:ss')}"></span>
                             </div>
                             <!--二级评论弹框-->
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse sub-comments"
                                  th:id="${'comment-'+comment.id}">
-<!--                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-c" th:each="comment : ${comments}">-->
-<!--                                    &lt;!&ndash;评论列表&ndash;&gt;-->
-<!--                                    <div class="media">-->
-<!--                                        <div class="media-left">-->
-<!--                                            <a href="#">-->
-<!--                                                <img class="media-object img-rounded"-->
-<!--                                                     th:src="${comment.user.avatarUrl}">-->
-<!--                                            </a>-->
-<!--                                        </div>-->
-<!--                                        <div class="media-body">-->
-<!--                                            <h5 class="media-heading">-->
-<!--                                                <span th:text="${comment.user.name}"></span>-->
-<!--                                            </h5>-->
-<!--                                            <div th:text="${comment.content}"></div>-->
-<!--                                            <div class="menu distance">-->
-<!--                                                <span th:text="${#dates.format(comment.gmtCreate,'YYYY-MM-DD HH:mm:ss')}"></span>-->
-<!--                                            </div>-->
-<!--                                        </div>-->
-<!--                                        <hr>-->
-<!--                                    </div>-->
-<!--                                </div>-->
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <input type="text" class="form-control" placeholder="说点什么吧..." th:id="${'reply-'+comment.id}">
                                     <button type="button" class="btn btn-success btn-publish" onclick="comment(this)" th:data-id="${comment.id}">评论</button>
