--- a/src/main/resources/static/bootstrap-3.3.7-dist/css/community.css
+++ b/src/main/resources/static/bootstrap-3.3.7-dist/css/community.css
@@ -42,7 +42,26 @@ body {
     cursor: pointer;
     margin-left: 10px;
 }
-
+.community-tag {
+    text-decoration-line: none;
+    cursor: pointer;
+    display: inline-block;
+    height: 20px;
+    line-height: 16px;
+    padding: 2px 5px;
+    background-color: #99cfff;
+    font-size: 12px;
+    color: #fff !important;
+    border-radius: 4px;
+    margin: 4px;
+}
+.question-related {
+    line-height: 25px;
+    font-size: 14px;
+    margin-left: 0;
+    list-style: none;
+    padding-left: 0;
+}
 .jumbotron {
     margin: 50px;
 }
@@ -105,4 +124,7 @@ body {
 .commit-content {
     margin-left: 15px;
     margin-bottom: -5px;
+}
+.tagHr{
+    margin-bottom: 5px;
 }
