--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -27,15 +27,23 @@
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <span th:each="tag : ${question.tag.split(',')}">
+                        <a th:href="@{/(page=1,tag=${tag})}"
+                           th:text="${tag}" class="community-tag"></a>
+                    </span>
+                </div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tagHr">
             <!--回复列表-->
-                <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
-                   th:if="${session.user != null && session.user.id == question.creator}">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    编辑
-                </a>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
+                       th:if="${session.user != null && session.user.id == question.creator}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                    </a>
+                </div>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4>
+                <h4 style="margin-bottom: 5px">
                     <span class="review" th:text="${question.commentCount}"></span> 个回复
                 </h4>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hrsp" >
@@ -116,12 +124,26 @@
                     </div>
                 </div>
             </div>
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4>相关问题</h4>
+
+                <!--微信号-->
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h5>关注克莱的箱子,欢迎访问github博客</h5>
+                    <img class="img-thumbnail" src="" style="width: 100%">
+                </div>
+
+                <!--相关问题列表-->
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h4>相关问题</h4>
+                    <ul class="question-related">
+                        <li th:each="related : ${relatedQuestion}">
+                            <a th:href="@{'/question/'+${related.id}}" th:text="${related.title}"></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        </div>
+    </div>
 </div>
 </body>
 </html>
