--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -3,6 +3,7 @@
 <head>
     <title>发布 - Klay的论坛社区</title>
     <script type="text/javascript" src="/bootstrap-3.3.7-dist/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="/bootstrap-3.3.7-dist/js/community.js"></script>
     <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/community.css">
     <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
@@ -19,21 +20,46 @@
                 <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">标题:</label>
-                    <input type="text" class="form-control"  th:value="${title}" id="title" name="title" placeholder="请描述...">
+                    <input type="text" class="form-control" th:value="${title}" id="title" name="title"
+                           placeholder="请描述...">
                 </div>
                 <div class="form-group">
                     <label for="description">问题补充(必填，请参照右侧提示):</label>
-                    <textarea name="description" id="description" th:text="${description}" class="form-control" cols="30" rows="10"></textarea>
+                    <textarea name="description" id="description" th:text="${description}" class="form-control"
+                              cols="30" rows="10"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签:</label>
-                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="输入标签">
+                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag"
+                           placeholder="输入标签,以英文逗号分隔" onclick="show()">
+                    <div id="selectTag" class="publish-tag">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation" th:each="selectCategory : ${tags}">
+                                <a th:href="${'#'+selectCategory.categoryName}" aria-controls="home" role="tab"
+                                   data-toggle="tab" th:text="${selectCategory.categoryName}"></a>
+                            </li>
+                        </ul>
+                        <div class="tab-content">
+                            <div role="tabpanel" th:id="${selectCategory.categoryName}"
+                                 th:each="selectCategory: ${tags}">
+                                <span>
+                                    <span th:each="selectTag: ${selectCategory.tags}">
+                                        <span class="community-tag" onclick="selectTag(this)"
+                                          th:data-tag="${selectTag}"
+                                          th:text="${' '+selectTag}">
+                                        </span>
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="container-fluid main">
                     <div class="row">
-                        <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:if="${Error != null}" th:text="${Error}"></div>
-                            <button type="submit" class="btn btn-success btn-publish">确认发起</button>
+                        <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:if="${Error != null}"
+                             th:text="${Error}"></div>
+                        <button type="submit" class="btn btn-success btn-publish">确认发起</button>
                     </div>
                 </div>
             </form>
