--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -15,32 +15,49 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span th:text="${sectionName}"></span></h2>
             <hr>
-            <div class="media" th:each="question : ${pagination.questions}">
-                <div class="media-left">
-                    <a href="#">
-                        <img class="media-object img-rounded"
-                             th:src="${question.user.avatarUrl}">
-                    </a>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading" th:text="${question.title}"></h4>
-                    <span th:text="${question.description}"></span><br>
-                    <span class="desc-text">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'questions'}">
+                <div class="media" th:each="question : ${pagination.data}">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object img-rounded"
+                                 th:src="${question.user.avatarUrl}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">
+                            <a th:href="@{'/question/'+${question.id}}" th:text="${question.title}"></a>
+                        </h4>
+                        <span th:text="${question.description}"></span><br>
+                        <span class="desc-text">
                         <span th:text="${question.commentCount}"></span>个回复 ·
                             <span th:text="${question.viewCount}"></span>次浏览 ·
                             <span th:text="${question.followCount}"></span>个关注 ·
-                            <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm:ss')}"></span> ·
+                            <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span> ·
                         <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
                            th:if="${session.user != null && session.user.id == question.creator}">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
                     </a>
                         </span>
+                    </div>
                 </div>
             </div>
-            <nav aria-label="Page navigation">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'replies'}">
+                <div class="media" th:each="notification : ${pagination.data}">
+                    <div class="media-body">
+                        <p class="media-heading">
+                            <span th:text="${notification.notifierName+' '+notification.typeName+' '}"></span>
+                            <a th:href="@{'/notification/'+${notification.id}}"
+                               th:text="${notification.outerTitle}"></a>
+                            <span class="label label-danger" th:if="${notification.status == 0}">未读</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${pagination.hasFirstPage}">
-                        <a th:href="@{'profile'+${section}(page=${1})}" aria-label="to_First_Page">
+                        <a th:href="@{''+${section}(page=${1})}" aria-label="to_First_Page">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
@@ -63,14 +80,15 @@
                         </a>
                     </li>
                 </ul>
-            </nav>
-
+                </nav>
+            </div>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="list-group section">
                 <a href="/profile/questions"  th:class="${section == 'questions'}?'list-group-item active' : 'list-group-item'">我的提问</a>
                 <a href="/profile/replies" th:class="${section == 'replies'}?'list-group-item active' : 'list-group-item'">最新回复
-                    <span class="badge">14</span></a>
+                    <span class="badge" th:text="${unreadCount}"></span>
+                </a>
             </div>
         </div>
     </div>
