--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,25 +46,25 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${pagination.hasFirstPage}">
-                        <a href="/?page=1" aria-label="to_First_Page">
+                        <a th:href="@{/(page=1,search=${search})}" aria-label="to_First_Page">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
                     <li th:if="${pagination.hasPreviousPages}">
-                        <a th:href="@{/(page=${pagination.page - 1})}" aria-label="to_Previous_Page">
+                        <a th:href="@{/(page=${pagination.page - 1},search=${search})}" aria-label="to_Previous_Page">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
                     <li th:each="page : ${pagination.pages}" th:class="${pagination.page == page}?'active' : ''">
-                        <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+                        <a th:href="@{/(page=${page},search=${search})}" th:text="${page}"></a>
                     </li>
                     <li th:if="${pagination.hasNextPage}">
-                        <a th:href="@{/(page=${pagination.page + 1})}" aria-label="to_Next_Page">
+                        <a th:href="@{/(page=${pagination.page + 1},search=${search})}" aria-label="to_Next_Page">
                         <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
                     <li th:if="${pagination.hasEndPage}" >
-                        <a th:href="@{/(page=${pagination.currentPage})}" aria-label="to_Last_Page">
+                        <a th:href="@{/(page=${pagination.currentPage},search=${search})}" aria-label="to_Last_Page">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
