--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -86,7 +86,7 @@
             </form>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>问题发起指南</h3>
+            <h3>问题发起指南（feature施工中）</h3>
             · 问题标题：请用精简的语言描述您发布的问题，不超过25个字<br>
 
             · 问题补充：详细补充您的问题内容，并确保问题描述清晰直观，并提供一些相关资料<br>
